<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ewitowski.sosmedinfo.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/Accident"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/Emergency_Contact_anna"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Emergency_Contact_anna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/emergency_contact_anna"
        app:layout_constraintBottom_toTopOf="@+id/allergies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/allergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/allergies"
        app:layout_constraintBottom_toTopOf="@+id/emergency_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Emergency_Contact_anna" />

    <EditText
        android:id="@+id/emergency_number"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="phone"
        android:text="@string/hint"
        app:layout_constraintBottom_toTopOf="@+id/medical_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allergies"
        tools:text="@string/hint" />

    <EditText
        android:id="@+id/medical_history"
        android:layout_width="315dp"
        android:layout_height="87dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/medical_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_number" />

</android.support.constraint.ConstraintLayout>
